Fix for project animation on Safari
adjust z-index on projects and section

--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@ body, html {
 }
 
 section {
-	position:relative;
-	z-index:2;
+/*	position:relative;
+	z-index:2;*/
 }
 
 p {
@@ -485,6 +485,7 @@ button:hover {
 #works .project{
 	width:100%;
 	height:50%;
+	z-index:2;
 }
 
 #works .item {
@@ -702,7 +703,7 @@ button:hover {
 }
 
 /* flip animation */
-.project.flip .front {
+.project.flip .front, .project.ng-scope.flip .front {
     z-index: 3;
     -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
